Updated paginated table styling

--- a/src/components/Inventory2/styles/inventory.scss
+++ b/src/components/Inventory2/styles/inventory.scss
@@ -3,31 +3,33 @@
 .inventory2-container {
 	width: calc(100vw - #{$nav-width});
 
-	.inventory-filters {
-		display: flex;
-        margin-left: 36px;
-		margin-top: 20px;
-		margin-bottom: -32px;
-	}
-
-	.select {
-		width: 400px;
-        display: inline-block;
-		margin-right: 32px;
-	}
-
-	.no-items {
-		margin: 36px;
-	}
 }
 
 .inventory2-content {
 	display: flex;
 	height: calc(100% - #{$section-header-height});
 
+	.inventory-filters {
+		display: flex;
+		margin: 24px 36px;
+	}
+
+	.pagination {
+		padding: 0 36px;
+	}
+
+	.select {
+		width: 300px;
+		display: inline-block;
+		margin-right: 32px;
+	}
+
+	.no-items {
+		margin: 36px;
+	}
+
 	.inventory-list-container {
 		flex: 11;
-		margin-top: 20px;
 	}
 
 	.inventory-drawer-container {
