--- a/src/components/PaginatedTable/styles/paginatedtable.scss
+++ b/src/components/PaginatedTable/styles/paginatedtable.scss
@@ -10,27 +10,35 @@
 
 	.pagination {
 		width: 100%;
-		text-align: right;
-		font-size: 12px;
-		line-height: 24px;
-		margin-top: 8px;
-		color: rgba(0,0,0,0.3);
-		border-bottom: 1px solid $gray-ultra-light;
+		font-size: 14px;
+		line-height: 40px;
+        display: flex;
+		justify-content: space-between;
 
-		&>div, &>i {
-			margin: 0 0 0 8px;
+		.pagination-info {
+            font-weight: bold;
+			color: $gray-dark;
 		}
 
-		.pagination-arrow {
-			color: rgba(0, 0, 0, 0.3);
-			vertical-align: middle;
-			cursor: pointer;
-			font-size: 24px;
+		.pagination-links {
+			color: $primary-light;
+			display: flex;
+			align-items: center;
 
-			&.disabled {
+			.pagination-pipe {
+				padding: 0 8px;
+			}
+
+			.disabled {
 				color: $gray-light;
 			}
 		}
+
+		.pagination-link {
+			vertical-align: middle;
+			cursor: pointer;
+		}
+
 	}
 
 	li {
