maya process list changes

--- a/src/components/Processes/styles/processes.scss
+++ b/src/components/Processes/styles/processes.scss
@@ -1,5 +1,10 @@
 @import 'styles/constants.scss';
 
+.processes-container {
+  width: calc(100vw - #{$nav-width});
+
+}
+
 div.processes {
   .code {
     flex: 4;
