--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -30,6 +30,9 @@ $elephant-ultra-light: rgba(246, 248, 249, 1);
 
 $orange: rgba(254, 198, 44, 1);
 
+$yellow: rgba(255, 215, 84, 1);
+$yellow-light: rgba(255, 243, 204, 1);
+
 $background-color: $elephant-ultra-light;
 $theme-color: $primary;
 
