now fetches recent entries for attributes

--- a/src/components/ProcessAttribute/styles/processattributesubmissions.scss
+++ b/src/components/ProcessAttribute/styles/processattributesubmissions.scss
@@ -8,21 +8,33 @@
 	}
 
 	.recent-subs {
-		display: flex;
+		//display: flex;
+		//justify-content: flex-start;
+
+		div {
+			flex: 0;
+			display: inline-block;
+			max-width: 80px;
+			margin-right: 4px;
+			overflow: hidden;
+			text-overflow: ellipsis;
+		}
 		
 		span {
-			white-space: no-wrap;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
 			flex: 0;
 			background-color: $yellow;
 			padding: 2px 6px;
-			display: inline-block;
 			border-radius: 2px;
-			margin: 4px;
+			font-size: 12px;
 		}
 	}
 
 	.submission-title {
 		margin-left: 4px;
+		margin-bottom: 4px;
 		background-color: $yellow-light;
 		padding: 2px 6px;
 		display: inline-block;
