delete and duplicate button

--- a/src/components/ProcessPage/styles/processpage.scss
+++ b/src/components/ProcessPage/styles/processpage.scss
@@ -31,7 +31,7 @@
 }
 
 .process-information {
-	padding-left: 36px;
+	padding: 0 36px;
 	background-color: $background-color;
 
 	.process-information-header {
