--- a/src/components/Button/styles/button.scss
+++ b/src/components/Button/styles/button.scss
@@ -3,14 +3,29 @@
 .button {
 	border-radius: 2px;
 	font-size: 14px;
+
 	&:hover {
 		box-shadow: rgba(0,0,0,0.3) 0 2px 6px;
+	}
+
+	&.wide {
+		padding: 12px 0;
 	}
 }
 
 .button.button-gray {
 	background-color: $gray-ultra-light;
 	color: $gray;
+}
+
+.button.button-red {
+	background-color: $red;
+	color: white;
+}
+
+.button.button-dark-gray {
+	background-color: $gray;
+	color: white;
 }
 
 .button.button-disabled {
