--- a/src/components/ObjectList/styles/objectlist.scss
+++ b/src/components/ObjectList/styles/objectlist.scss
@@ -10,7 +10,7 @@
         border-bottom: none; //override PaginatedTable header border
     }
 
-    .sk-spinner {
+    & > .sk-spinner {
         margin: 160px auto;
     }
 }
