--- a/src/components/ObjectList/styles/objectlistitem.scss
+++ b/src/components/ObjectList/styles/objectlistitem.scss
@@ -6,10 +6,8 @@
     cursor: pointer;
     height: 40px;
     line-height: 40px;
-    margin-bottom: 8px;
-    padding: 0 20px;
-    background-color: white;
-    border-radius: 4px;
+    padding: 0 36px;
+    border-bottom: 1px solid $gray-ultra-light;
     //box-shadow: $gray-ultra-light 0 2px 4px 0;
 
     &:hover {
