--- a/src/components/ObjectList/styles/objectlist.scss
+++ b/src/components/ObjectList/styles/objectlist.scss
@@ -1,10 +1,9 @@
 @import 'styles/constants.scss';
 
 .object-list {
-    padding: 0 36px;
     width: 100%;
     min-width: 720px;
-    max-width: 1200px;
+//    max-width: 1200px;
 
     .paginated-table.border-none li.header {
         border-bottom: none; //override PaginatedTable header border
