Process list style fixes

--- a/src/components/ObjectList/styles/objectlist.scss
+++ b/src/components/ObjectList/styles/objectlist.scss
@@ -3,6 +3,7 @@
 .object-list {
     width: 100%;
     min-width: 720px;
+    padding-bottom: 40px;
 //    max-width: 1200px;
 
     .paginated-table.border-none li.header {
