--- a/src/components/PaginatedTable/styles/paginatedtable.scss
+++ b/src/components/PaginatedTable/styles/paginatedtable.scss
@@ -14,8 +14,7 @@
 		line-height: 60px;
         display: flex;
 		justify-content: space-between;
-		padding-left: 40px;
-		padding-right: 60px;
+		padding: 0 36px;
 
 		.pagination-info {
             font-weight: bold;
