--- a/src/components/ProcessPage/styles/processpage.scss
+++ b/src/components/ProcessPage/styles/processpage.scss
@@ -7,6 +7,7 @@
 		display: flex;
 		min-height: calc(100vh - 120px);
 		height: 100%;
+		max-width: 1200px;
 
 		.process-information {
 			flex: 3;
@@ -37,6 +38,7 @@
 	.process-information-header {
 		padding: 24px 0;
 		display: flex;
+        justify-content: space-between;
 
 		img {
 			margin-right: 8px;
@@ -45,6 +47,10 @@
 			line-height: 30px;
 			font-size: 20px;
 		}
+	}
+
+	.process-name {
+		display: flex;
 	}
 
 	.process-information-basic {
