--- a/src/components/Application/styles/applicationsectionheaderwithbutton.scss
+++ b/src/components/Application/styles/applicationsectionheaderwithbutton.scss
@@ -5,7 +5,7 @@
     height: $section-header-height;
     line-height: $section-header-height;
     color: white;
-    padding: 0 36px;
+    padding: 0 $object-list-right-padding 0 $object-list-left-padding;
     background-color: $primary;
     -webkit-font-smoothing: antialiased;
 
