--- a/src/components/ObjectList/styles/objectlistitem.scss
+++ b/src/components/ObjectList/styles/objectlistitem.scss
@@ -5,7 +5,7 @@
     flex-direction: row;
     height: 40px;
     line-height: 40px;
-    padding: 0 36px;
+    padding: 0 $object-list-right-padding 0 $object-list-left-padding;
     border-bottom: 1px solid $gray-ultra-light;
     //box-shadow: $gray-ultra-light 0 2px 4px 0;
 
@@ -40,6 +40,10 @@
                 color: $elephant;
                 font-size: 20px;
             }
+        }
+
+        .button-dropdown.expanded > button {
+            background-color: $primary;
         }
     }
 }
