--- a/src/components/PaginatedTable/styles/paginatedtable.scss
+++ b/src/components/PaginatedTable/styles/paginatedtable.scss
@@ -14,7 +14,7 @@
 		line-height: 60px;
         display: flex;
 		justify-content: space-between;
-		padding: 0 36px;
+		padding: 0 $object-list-right-padding 0 $object-list-left-padding;
 
 		.pagination-info {
             font-weight: bold;
