--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -62,3 +62,5 @@ $top-padding: 48px;
 $card-shadow: 0 0 8px 0 rgba(0,0,0,0.08);
 $panel-width: 300px;
 $section-header-height: 56px;
+$object-list-left-padding: 36px;
+$object-list-right-padding: 72px;
