--- a/src/components/TaskPage/styles/taskpage.scss
+++ b/src/components/TaskPage/styles/taskpage.scss
@@ -7,7 +7,7 @@
 
     .task-container {
         display: flex;
-        height: 100%;
+        min-height: calc(100% - #{$section-header-height});
         max-width: 1200px;
         padding-right: 40px;
     }
