Added Product History

--- a/src/components/TaskPage/styles/taskqr.scss
+++ b/src/components/TaskPage/styles/taskqr.scss
@@ -2,7 +2,7 @@
 
 .task-qr {
     width: 188px;
-    padding-top: 40px;
+    padding-top: $task-page-top-padding;
 
     .title {
         color: $elephant;
