--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -64,3 +64,4 @@ $panel-width: 300px;
 $section-header-height: 56px;
 $object-list-left-padding: 36px;
 $object-list-right-padding: 72px;
+$task-page-top-padding: 36px;
