--- a/src/components/TaskPage/styles/producthistory.scss
+++ b/src/components/TaskPage/styles/producthistory.scss
@@ -4,7 +4,7 @@
     background-color: $elephant-ultra-light;
     width: 260px;
     min-height: 100%;
-    padding: 32px 12px;
+    padding: $task-page-top-padding 12px 0;
 
     .title {
         padding-left: 12px;
@@ -13,16 +13,39 @@
     }
 
     .focus-box {
-        padding: 20px 0;
+        padding: 16px 0;
+        margin: 20px 0;
         background-color: white;
         width: 100%;
         border-radius: 4px;
         box-shadow: $gray-ultra-light 0 0 10px 0;
     }
 
+    .inputs-label {
+        display: flex;
+        align-items: center;
+        height: 16px;
+        width: 80px;
+        margin-left: 52px;
+        margin-bottom: 12px;
+        padding: 0 8px;
+        background-color: $primary-ultra-light;
+        border-radius: 10px;
+        color: $gray-dark;
+        font-size: 10px;
+        text-transform: uppercase;
+
+        i {
+            font-size: 10px;
+            margin-right: 4px;
+        }
+    }
+
     .task-summary {
         display: flex;
         margin-bottom: 12px;
+        cursor: pointer;
+        position: relative;
 
         &:last-child {
             margin-bottom: 0;
@@ -52,6 +75,20 @@
                 opacity: 1;
             }
 
+        }
+
+        .expand-i {
+            visibility: hidden;
+            font-size: 12px;
+            position: absolute;
+            top: 0;
+            right: 0;
+        }
+
+        &:hover {
+            .expand-i {
+                visibility: visible;
+            }
         }
     }
 }
