--- a/src/components/TaskPage/styles/taskmain.scss
+++ b/src/components/TaskPage/styles/taskmain.scss
@@ -2,7 +2,7 @@
 
 .task-main {
     flex-grow: 1;
-    padding: 40px;
+    padding: $task-page-top-padding 40px 40px;
 
     .task-main-container {
         width: 400px;
@@ -45,7 +45,7 @@
     }
 
     .task-info {
-        margin-bottom: 60px;
+        margin-bottom: 20px;
         display: flex;
         flex-wrap: wrap;
 
