--- a/src/components/TaskPage/styles/producthistory.scss
+++ b/src/components/TaskPage/styles/producthistory.scss
@@ -82,7 +82,7 @@
             font-size: 12px;
             position: absolute;
             top: 0;
-            right: 0;
+            right: 12px;
         }
 
         &:hover {
