--- a/src/components/Application/styles/applicationsectionheaderwithbutton.scss
+++ b/src/components/Application/styles/applicationsectionheaderwithbutton.scss
@@ -3,28 +3,24 @@
 .app-section-header {
     font-size: 20px;
     height: $section-header-height;
-    line-height: $section-header-height;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     color: white;
     padding: 0 $object-list-right-padding 0 $object-list-left-padding;
     background-color: $primary;
     -webkit-font-smoothing: antialiased;
 
     .button {
-    	margin: 0 auto;
 	    background-color: white;
 		color: $primary;
-		float: right;
 		font-size: 15px;
-		margin-top: $section-header-height/2 - 18;
     }
 }
 
 .header-button {    
-    margin: 0 auto;
     background-color: white;
 	color: $primary;
-	float: right;
 	font-size: 15px;
-	margin-top: $section-header-height/2 - 18;
 }
     
