--- a/src/components/TaskPage/styles/taskqr.scss
+++ b/src/components/TaskPage/styles/taskqr.scss
@@ -8,6 +8,12 @@
         color: $elephant;
         text-align: center;
         margin-bottom: 20px;
+
+        img {
+            height: 10px;
+            width: 10px;
+            margin-right: 8px;
+        }
     }
 
     .qr-code-container {
