--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -54,7 +54,7 @@ $z-index-edit-menu: 992;
 
 //--------
 
-$sans-stack: 'SF Pro Text', 'Apercu', 'Interface', 'Helvetica';
+$sans-stack: -apple-system, BlinkMacSystemFont, 'SF Pro Text', 'Apercu', 'Interface', 'Helvetica', sans-serif;
 $baseline: 8px;
 $nav-width: 64px;
 $nav-height: 64px;
