Show toggle for boolean fields in the task page

--- a/src/components/TaskPage/styles/taskform.scss
+++ b/src/components/TaskPage/styles/taskform.scss
@@ -11,6 +11,17 @@
         margin-bottom: 20px;
     }
 
+    .boolean-container {
+        display: flex;
+        align-items: center;
+        height: 38px;
+
+        .switch {
+            height: 16px;
+            margin-left: 20px;
+        }
+    }
+
     .input-container {
         position: relative;
     }
