--- a/src/components/Card/styles/ButtonDropdown.scss
+++ b/src/components/Card/styles/ButtonDropdown.scss
@@ -3,6 +3,10 @@
 div.button-dropdown {
 	position: relative;
 	z-index: 1;
+	
+	.material-icons.more_horiz {
+		font-size: 22px !important;
+	}
 
 	.button-dropdown-shim {
 		position: fixed;
