--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -33,6 +33,8 @@ $orange: rgba(254, 198, 44, 1);
 $yellow: rgba(255, 215, 84, 1);
 $yellow-light: rgba(255, 243, 204, 1);
 
+$green: #7AD69B;
+
 $background-color: $elephant-ultra-light;
 $theme-color: $primary;
 
