Remove !important, refactor icon css

--- a/src/components/ObjectList/styles/objectlistitem.scss
+++ b/src/components/ObjectList/styles/objectlistitem.scss
@@ -39,6 +39,10 @@
             i {
                 color: $elephant;
                 font-size: 20px;
+                
+                &.material-icons.more_horiz {
+                    font-size: 22px;
+                }
             }
         }
 
