Styling without icons

--- a/src/components/RecipeList/styles/product-recipe-list-item.scss
+++ b/src/components/RecipeList/styles/product-recipe-list-item.scss
@@ -1,5 +1,4 @@
-@import 'styles/constants.scss';
-@import './recipe-item-field.css';
+@import '../../../styles/constants.scss';
 
 .process-attr-wrapper {
 	display: flex;
@@ -13,84 +12,23 @@
 }
 
 .process-attribute {
-	cursor: pointer;
+	margin-left: 0px;
+	//cursor: pointer;
 	box-shadow: rgba($gray-ultra-light, 0.1) 0 0 10px 0;
-	margin: 8px 0;
-	padding: 16px;
-	display: flex;
-
-	div, .product-recipe-list-item-stage, .process-attr-handle > span {
+	//margin: 8px 0;
+	//padding: 16px;
+	//display: flex;
+	
+	.recipe-item-field {
+		color: $gray-dark;
+		display: flex;
 		flex: 1;
 	}
-
-	.product-recipe-list-item-stage {
-		color: $gray-dark;
-	}
 }
-
-.process-attr-delete, .process-attr-handle {
-	display: flex;
-	align-items: center;
-	i {
-		vertical-align:middle;
-		font-size: 16px;
-		color: $primary;
-		visibility: hidden;
-	}
-	span {
-		vertical-align: middle;
-		width: 32px;
-		max-width: 32px;
-		overflow-x: hidden;
-		color: $gray-light;
-	}
-}
-
-.process-attr-delete {
-	margin-left: 16px;
-}
-
-.process-attr-wrapper.selected, .process-attribute-new  {
-	.process-attribute {
-		display: flex;
-		flex-direction: column;
-		box-shadow: rgba($gray-ultra-light, 0.2) 0 0 10px 0;
-
-		& > div.process-attr-inputs {
-			display: flex;
-			flex-direction: row;
-
-			& > div {
-				flex: 1;
-			}
-		}
-	}
-
-}
-
-.process-attribute-new {
-	div.process-attr-handle i, span {
-		visibility: visible;
-		color: $gray-light;
-	}
-
-	.process-attribute {
-		margin-right: 32px;
-	}
-}
-
 
 /* HOVER STUFF */
 .process-attr-wrapper {
-	&:hover {
-		.process-attr-handle i {
-			visibility: visible;
-		}
-		.process-attr-delete i {
-			visibility: visible;
-		}
-		.process-attribute {
-			box-shadow: rgba($gray-ultra-light, 0.2) 0 0 10px 0;
-		}
+	.process-attribute:hover {
+		box-shadow: rgba($gray-ultra-light, 0.2) 0 0 10px 0;
 	}
 }
