added ingredient fields

--- a/src/components/ProductPage/styles/productpage.scss
+++ b/src/components/ProductPage/styles/productpage.scss
@@ -2,9 +2,11 @@
 
 .product-page {
 	width: 100%;
+	background-color: white;
 
 	.product-page-recipe-list {
 		flex: 5;
+		background-color: white;
 	}
 
 	.product-information {
