--- a/src/components/Inputs/styles/antdesignformgroup.scss
+++ b/src/components/Inputs/styles/antdesignformgroup.scss
@@ -13,5 +13,10 @@
         display:flex;
         margin: 8px 0 24px;
     }
+    
+    .ant-select-selection__placeholder {
+        font-size: 14px;
+        font-family: "Monospaced Number", "Chinese Quote", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    }
 }
 
