--- a/src/components/RecipeList/styles/recipecreate.scss
+++ b/src/components/RecipeList/styles/recipecreate.scss
@@ -1,5 +1,16 @@
 @import '../../../styles/constants';
 
 .recipe-create {
-	display: flex;
+	.process-attributes-header {
+		display: flex;
+		justify-content: space-between;
+		& > span {
+			flex: 1;
+		}
+		
+		& > button {
+			flex: 0;
+			white-space: nowrap;
+		}
+	}
 }
