--- a/src/components/Dialog/styles/dialogheader.scss
+++ b/src/components/Dialog/styles/dialogheader.scss
@@ -4,6 +4,7 @@
     padding: 20px 16px 16px;
     min-height: 52px;
     border-bottom: 1px solid $gray-ultra-light;
+    color: $black;
 
     i {
         font-size: 16px;
