WHY recipecreate.scss STYLING NOT WORK!?!?
So confused...

--- a/src/components/RecipeList/styles/recipecreate.scss
+++ b/src/components/RecipeList/styles/recipecreate.scss
@@ -1,12 +1,13 @@
 @import '../../../styles/constants';
 
 .recipe-create {
+	background-color: red;
 	.process-attributes-header {
 		display: flex;
-		justify-content: space-between;
+		
 		& > span {
 			flex: 1;
-			background-color: red;
+			//background-color: red;
 		}
 		
 		& > button {
