Delete files, add padding

--- a/src/components/RecipeList/styles/recipecreate.scss
+++ b/src/components/RecipeList/styles/recipecreate.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/constants.css';
 
 .recipe-create {
-	.process-attributes-header {
+	.header {
 		display: flex;
 		
 		& > span {
