--- a/src/components/Inputs/styles/formgroup.scss
+++ b/src/components/Inputs/styles/formgroup.scss
@@ -1,16 +1,19 @@
 @import 'styles/constants.scss';
 
 .form-group {
-    label {
-        font-size: 14px;
-        color: $elephant;
-        margin-bottom: 8px;
-        -webkit-font-smoothing: antialiased;
-				-moz-osx-font-smoothing: grayscale;
-    }
-
     .form-field {
         margin: 8px 0 24px;
     }
+}
+
+.form-label {
+	label {
+    font-size: 14px;
+    color: $elephant;
+    margin-bottom: 8px;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  margin-bottom: 8px;
 }
 
